@@ -21,6 +21,8 @@ Improvements:
  - Handle editor options with multiple arguments. (GH #12)
  - Show filename when running tig blame with copy detection. (GH #19)
  - Use 'source <path>' command to load additional files from ~/.tigrc
+ - Make display of space changes togglable in the diff and stage view.
+   Bound to 'W' by default.
 
 Bug fixes:
 
